10/26/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Removed feature that when you type something it begins editing the
      current node. It would begin editing even if you typed menu shortcut or
      something.

06/28/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Set the name of components so that they can be used in test scripts

06/20/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Changed the text area for editing node values from a JEditorPane to a
      JTextArea and set the line wrap policy to false so that word wrapping
      doesn't occur. JEditorPane was wrapping lines very strangely.

06/16/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Fixed bug where a processing instruction node's icon was not rendered
      correctly when being edited.

06/15/2005 Trish Hartnett <trishah136@users.sourceforge.net>
     
    * Added tooltip texts for the checkboxes/scroll panes of the Options dialog box.

05/30/2005  Ian Lewis <IanLewiS@member.fsf.org>

    * Fixed bug that caused NullPointerExceptions to be thrown when editing
      attributes of an element node.
    * Fixed a bug that caused renaming an attribute to clear the value of the
      attribute.

05/20/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Cleaned up the code a bit so I don't have duplicate classes.
    * Removed the empty check box from the edit node dialog since it didn't do
      anything anyway.

05/19/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Added support for showing choosing attribute values defined in the
      Schema/DTD in the Attributes table.

05/15/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Added support for showing ID type attributes in the tree.
    * Added a new option that allows you to show all attributes, just ID
      attributes or no attributes in the tree.

05/12/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Using messages in a few more places now.

05/09/2005  Ian Lewis <IanLewis@member.fsf.org>
