@@ -62,6 +62,7 @@ public class TreeViewPlugin extends ViewPlugin {
         addAction("treeview.add.attribute", new AddAttributeAction());
         addAction("treeview.remove.attribute", new RemoveAttributeAction());
         addAction("treeview.edit.node", new EditNodeAction());
+        addAction("treeview.add.doctype.node", new AddDocTypeAction());
     }//}}}
     
     //{{{ newDocumentView()
